# learn-opengl

./: .clang-format  .gitmodules  CMakeLists.txt  NOTES.md  QUESTIONS.md  README.md  msys2Dependencies.sh
assets/shaders/: shader.frag  shader.vert
docs/: DEVELOPMENT.md  NOTES.md  QUESTIONS.md
include/: logger.h  mesh.h  renderer.h  shader.h  window.h
shaders/: shader.frag  shader.vert
src/: main.c  mesh.c  renderer.c  shader.c  window.c
